# data-types-and-structures

./: ТитульникЛаб.docx
lab_01/: CMakeLists.txt  Report.docx  main.c  report.md
lab_01/include/: array_tools.h  defines.h  extended_arithmetic.h  return_codes.h  types.h  ui.h
lab_01/src/: array_tools.c  extended_arithmetic.c  ui.c
lab_02/: CMakeLists.txt  gen.c  gen.sh  main.c  report.md
lab_02/include/: defines.h  options.h  process.h  return_codes.h  types.h
lab_02/include/algorithm/: key_table.h  sorting.h
lab_02/include/io/: cars_io.h  io.h  validators.h
lab_02/include/utils/: array_tools.h  string_tools.h  time.h
lab_02/src/: options.c  process.c
lab_02/src/algorithm/: key_table.c  sorting.c
lab_02/src/io/: cars_io.c  io.c  validators.c
lab_02/src/utils/: array_tools.c  string_tools.c  time.c
lab_03/: CMakeLists.txt  main.c  measure.c  memuse.gp  report.md  tables.txt  timediff.gp
lab_03/data/: matrix_1000x1000_mem.txt  matrix_1000x1000_performance.txt  matrix_100x100_mem.txt  matrix_100x100_performance.txt  matrix_10x10_mem.txt  matrix_10x10_performance.txt  matrix_2500x2500_mem.txt  matrix_2500x2500_performance.txt  matrix_250x250_mem.txt  matrix_250x250_performance.txt  matrix_5000x5000_mem.txt  matrix_5000x5000_performance.txt  matrix_500x500_mem.txt  matrix_500x500_performance.txt  matrix_50x50_mem.txt  matrix_50x50_performance.txt
lab_03/include/: commands.h  matrix_operations.h  return_codes.h  types.h
lab_03/include/io/: matrix_io.h  validators.h
lab_03/include/utils/: string_tools.h  utils.h
lab_03/src/: commands.c  matrix_operations.c
lab_03/src/io/: io.c  matrix_io.c  validators.c
lab_03/src/utils/: time.c  utils.c
lab_04/: CMakeLists.txt  main.c  measure.c  mem.gp  report.md
lab_04/data/: da_stack.txt  ll_stack.txt  sa_stack.txt
lab_04/include/: commands.h  da_stack.h  ll_stack.h  return_codes.h  sa_stack.h  types.h
lab_04/include/io/: io.h  ptr_io.h  validators.h
lab_04/include/utils/: utils.h
lab_04/src/: commands.c  da_stack.c  ll_stack.c  sa_stack.c
lab_04/src/io/: io.c  ptr_io.c  validators.c
lab_04/src/utils/: string_tools.c  utils.c
lab_05/: CMakeLists.txt  main.c  measure.c  mem.gp  report.md
lab_05/include/: commands.h  iinput_funcs.h  list.h  ll_queue.h  return_codes.h  sa_queue.h  simuation.h  types.h  utils.h  validators.h
lab_05/src/: commands.c  iinput_funcs.c  list.c  ll_queue.c  sa_queue.c  simulation.c  validators.c
lab_05/src/utils/: time.c
lab_06/: CMakeLists.txt  main.c  report.md  tree.txt
lab_06/include/: binary_tree.h  commands.h  io.h  return_codes.h  typed_files.h
lab_06/include/utils/: time.h
lab_06/src/: binary_tree.c  commands.c  io.c  typed_files.c
lab_07/: CMakeLists.txt  main.c
lab_07/include/: AVLTree.h  BSTree.h  HashMap.h  list.h
lab_07/src/: AVLTree.c  BSTree.c  HashMap.c  List.c
